--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>AI Chatbot</title>
 </head>
 <body>
-    
+
+    <div class="chatContainer"></div>
+    <div class="promptContainer"></div>
+
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
